--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # It contains a serial number and references to the file structure
 # on your computer.
 # comment the following line if you want to have your project file included.
-eagle.epf
+# eagle.epf
 
 # Autorouter files
 *.pro
@@ -45,10 +45,10 @@ eagle.epf
 
 *.info
 
-# *.eps
+*.eps
 
 # file locks introduced since 7.x
 *.lck
 
-*.lock*
+*.~lock*
 output/
